20 Aug 2003 mipsator
 * added hash_add_array_adv() in hash.

18 Aug 2003 mipsator
 * added po_get_str() and po_get_list in pmk_obj.

17 Aug 2003 mipsator
 * fixed a small bug in depend_check().
 * finished parser improvement for list parsing.

16 Aug 2003 mipsator
 * added po_dup() in pmk_obj.

15 Aug 2003 mipsator
 * added po_append() to pmk_obj.
 * adapted solution of dynarray to hash functions.
 * sync with new hash functions.

14 Aug 2003 mipsator
 * found a better solution to handle structure freeing in dynarray.
 * reversed changes relative to use of pmk objects with dynarray.

13 Aug 2003 mipsator
 * more (disabled) stuff for list support.

12 Aug 2003 mipsator
 * renamed pmk objects function in the same style as hash and dynarray.
 * misc renaming into sources.
 * switch dynarray to use pmk objects.
 * added preliminary support for list in parser.

11 Aug 2003 mipsator
 * added pmk objects.
 * added pmk object support in hash.
 * added pmk object support in dynarray.
 * changes to use pmk objects with hast tables.
 * removed incorrect code in pmksetup and added use of get_line.

# snapshot 0.5.4

09 Aug 2003 mipsator
 * more stuff in pmkfile man page.
 * some changes in pmkscan data file.
 * some changes in pmkfile too.

08 Aug 2003 mipsator
 * rewritten parse_cell() in the same spirit as parse_opt().
 * modified parse_cell() and parse() to parse new and old format of pmkfile.
 * updated pmkfile.5 with new format syntax.
 * update pmkfile sample to new format.
 * modified Makefile to configure with pmk if previous version is already installed.
 * added support of escape character in quoted string.
 * added missing error messages in parse_quoted(), parse_list() and parse_word().
 * update pmkscan.dat to new parser format.

07 Aug 2003 mipsator
 * rewritten parse_opt().
 * updated sample files to work with the new parser.
 * added parser_test.c into test directory.
 * added parse_word(), parse_quoted(), parse_list() and skip_blank().